another quick fix idea to the pagination IE6 issue
svn@13498

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -754,6 +754,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner,td.sort-desc .x-grid3-hd-inner,td.sort-asc 
 .x-toolbar table {
 	margin:35px auto 0 auto;
 	text-align:center;
+	width:100%;
 }
 .x-toolbar table td table {
 	margin:0;
@@ -776,6 +777,8 @@ td.x-grid3-hd-over .x-grid3-hd-inner,td.sort-desc .x-grid3-hd-inner,td.sort-asc 
 	border-top:2px solid #FA4240;
 	text-align:center;
 	z-index:100;
+	width:100%;
+	text-align:center;
 }
 
 .x-grid3-row-expanded .x-grid3-row-body {
